--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="resources/css/style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Excursion</title>
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
+
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+
+    <figure>
+        <video src="resources/media/excursion.mp4" autoplay ></video>
+    </figure>
+
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommens new points of interest around you.</h3>
+
+    <figure>
+        <img src="resources/media/camp.webp" alt="Campfire">
+    </figure>
+
+    <figure id="phone-icon">
+        <img src="resources/media/phone.webp" alt="Cellphone icon">
+    </figure>
+
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    
+    <footer>
+        <p>© Excursion</p>
+    </footer>
 </body>
 </html>
